fix: merge conflict

--- a/packages/ibm-products-styles/src/components/DecoratorLink/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/DecoratorLink/_index-with-carbon.scss
@@ -5,4 +5,5 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-// @forward '../../../../ibm-products-styles/src/global/styles/project-settings';
+@use './carbon-imports';
+@use './decorator-link';
