--- a/packages/ibm-products-styles/src/components/DecoratorDualButton/_index.scss
+++ b/packages/ibm-products-styles/src/components/DecoratorDualButton/_index.scss
@@ -5,4 +5,4 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-// @forward '../../../../ibm-products-styles/src/global/styles/project-settings';
+@use './decorator-dual-button';
