--- a/packages/ibm-products-styles/src/components/DecoratorLink/_carbon-imports.scss
+++ b/packages/ibm-products-styles/src/components/DecoratorLink/_carbon-imports.scss
@@ -5,4 +5,5 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-// @forward '../../../../ibm-products-styles/src/global/styles/project-settings';
+// Import any Carbon component styles used from DecoratorLink in this file.
+// DecoratorLink uses the following Carbon components:
