--- a/packages/ibm-products-styles/src/components/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-with-carbon.scss
@@ -61,6 +61,9 @@
 @use './CoachmarkStack/index-with-carbon' as *;
 @use './DelimitedList/index-with-carbon' as *;
 @use './Decorator/index-with-carbon' as *;
+@use './DecoratorLink/index-with-carbon' as *;
+@use './DecoratorSingleButton/index-with-carbon' as *;
+@use './DecoratorDualButton/index-with-carbon' as *;
 @use './DescriptionList/index-with-carbon' as *;
 @use './FullPageError/index-with-carbon' as *;
 @use './SearchBar/index-with-carbon' as *;
