--- a/packages/ibm-products-styles/src/components/_index.scss
+++ b/packages/ibm-products-styles/src/components/_index.scss
@@ -69,6 +69,9 @@
 @use './InterstitialScreenViewModule';
 @use './DelimitedList';
 @use './Decorator';
+@use './DecoratorLink';
+@use './DecoratorSingleButton';
+@use './DecoratorDualButton';
 @use './DescriptionList';
 @use './FullPageError';
 @use './SearchBar';
