--- a/packages/ibm-products/src/components/TagOverflow/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/TagOverflow/_storybook-styles.scss
@@ -8,3 +8,18 @@
 @forward '../../../../ibm-products-styles/src/global/styles/project-settings';
 
 // TODO: add any additional styles used by TagOverflow.stories.js
+@use '../../../../ibm-products-styles/src/global/styles/display-box' as *;
+
+@use '@carbon/react/scss/spacing' as *;
+@use '@carbon/react/scss/theme' as *;
+
+.custom-icon {
+  display: inline-flex;
+  width: $spacing-07;
+  min-width: $spacing-07;
+  height: $spacing-07;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid $text-primary;
+  border-radius: 50%;
+}
