--- a/packages/ibm-products-styles/src/components/Card/_card.scss
+++ b/packages/ibm-products-styles/src/components/Card/_card.scss
@@ -171,7 +171,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
 }
 
 .#{$block-class}--has-slug {
-  @include utilities.callout-gradient('default', 0, 'layer');
+  @include utilities.ai-popover-gradient('default', 0, 'layer');
 
   border: 1px solid transparent;
   box-shadow: inset 0 -80px 70px -65px $ai-inner-shadow,
@@ -179,7 +179,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
 }
 
 .#{$block-class}__clickable.#{$block-class}--has-slug::before {
-  @include utilities.callout-gradient('hover', 0, 'layer');
+  @include utilities.ai-popover-gradient('hover', 0, 'layer');
 
   position: absolute;
   display: block;
