--- a/packages/ibm-products-styles/src/components/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-with-carbon.scss
@@ -68,3 +68,4 @@
 @use './StringFormatter/index-with-carbon' as *;
 @use './UserAvatar/index-with-carbon' as *;
 @use './StatusIndicator/index-with-carbon' as *;
+@use './FilterPanel/index-with-carbon' as *;
