fix(tagoverflow): all tags are getting displayed for a second during initial load

--- a/packages/ibm-products-styles/src/components/TagOverflow/_tag-overflow.scss
+++ b/packages/ibm-products-styles/src/components/TagOverflow/_tag-overflow.scss
@@ -23,7 +23,9 @@ $block-class: #{c4p-settings.$pkg-prefix}--tag-overflow;
 
 .#{$block-class} {
   display: flex;
+  overflow: hidden;
   width: 100%;
+  min-width: $spacing-12;
   align-items: center;
   white-space: nowrap;
 }
