--- a/packages/ibm-products-styles/src/components/FilterPanel/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_index-with-carbon.scss
@@ -8,4 +8,5 @@
 @use './carbon-imports';
 @use './filter-panel';
 @use './filter-panel-checkbox';
+@use './filter-panel-checkbox-with-overflow';
 @use './filter-panel-label';
