--- a/packages/ibm-products-styles/src/components/FilterPanel/_index.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_index.scss
@@ -7,4 +7,5 @@
 
 @use './filter-panel';
 @use './filter-panel-checkbox';
+@use './filter-panel-checkbox-with-overflow';
 @use './filter-panel-label';
