fix(sidePanel): resolve scroll issue - solution in progress

--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -122,9 +122,14 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
     z-index: 4;
     /* stylelint-disable-next-line carbon/layout-token-use */
     top: calc(-1px * var(--#{$block-class}--scroll-animation-distance));
+    min-height: $spacing-08;
     padding: $spacing-05;
     padding-bottom: 0;
     background-color: $layer-01;
+
+    &.#{$block-class}__header--has-title {
+      min-height: auto;
+    }
 
     &:has(.#{$block-class}__subtitle-text),
     &.#{$block-class}__header--has-subtitle {
@@ -251,6 +256,7 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
     opacity: calc(1 - var(--#{$block-class}--scroll-animation-progress));
     text-overflow: ellipsis;
     white-space: nowrap;
+    // margin-top: calc(-1px * var(--#{$block-class}--scroll-animation-distance));
   }
 
   .#{$block-class}__collapsed-title-text {
@@ -309,10 +315,6 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
 
     box-shadow: inset 0 -80px 70px -65px $ai-inner-shadow,
       0 4px 10px 2px $ai-drop-shadow;
-  }
-
-  .#{$block-class}__inner-content.#{$block-class}--scrolls {
-    padding-top: $spacing-05;
   }
 
   .#{$block-class}__action-toolbar {
