--- a/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-checkbox-with-overflow.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-checkbox-with-overflow.scss
@@ -12,10 +12,10 @@
 @use '../../global/styles/project-settings' as c4p-settings;
 @use '../../global/styles/mixins';
 
+@use '@carbon/styles/scss/colors' as *;
 @use '@carbon/layout/scss/convert' as *;
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/theme' as *;
-@use '@carbon/styles/scss/type';
 
 // The block part of our conventional BEM class names (blockClass__E--M).
 $block-class: #{c4p-settings.$pkg-prefix}--filter-panel-checkbox-with-overflow;
@@ -39,6 +39,8 @@ $carbon: #{c4p-settings.$carbon-prefix};
 // Size the menu button.
 .#{$block-class} .#{$block-class}__overflow-button {
   width: $spacing-06;
+  /* stylelint-disable-next-line carbon/theme-token-use */
+  background-color: $white;
   block-size: $spacing-06;
   min-block-size: $spacing-06;
 }
