--- a/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-group.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-group.scss
@@ -5,27 +5,35 @@
 // LICENSE file in the root directory of this source tree.
 //
 
+/* stylelint-disable function-no-unknown */
 /* stylelint-disable max-nesting-depth */
 
 // Standard imports.
 @use '../../global/styles/project-settings' as c4p-settings;
 @use '../../global/styles/mixins';
 
+@use '@carbon/layout/scss/convert' as *;
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/type';
 
 // FilterPanel uses the following Carbon for IBM Products components:
 // TODO: @use(s) of IBM Products component styles used by FilterPanel
-@use '../TruncatedList';
 
 // The block part of our conventional BEM class names (blockClass__E--M).
-$block-class: #{c4p-settings.$pkg-prefix}--filter-panel;
-$carbon: #{c4p-settings.$carbon-prefix};
+$block-class: #{c4p-settings.$pkg-prefix}--filter-panel-group;
+
+.#{$block-class} {
+  padding-top: $spacing-04;
+  border-top: to-rem(1px) solid $border-subtle;
+  margin-top: $spacing-04;
+  margin-bottom: $spacing-04;
+}
 
 .#{$block-class}__title {
-  @include type.type-style('body-compact-01');
+  @include type.type-style('label-01');
+  @include type.font-weight('semibold');
 
-  margin-top: $spacing-04;
+  margin-top: 0;
   margin-bottom: $spacing-04;
 }
