--- a/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-checkbox-with-overflow.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-checkbox-with-overflow.scss
@@ -40,7 +40,7 @@ $carbon: #{c4p-settings.$carbon-prefix};
 .#{$block-class} .#{$block-class}__overflow-button {
   width: $spacing-06;
   /* stylelint-disable-next-line carbon/theme-token-use */
-  background-color: $white;
+  background-color: $layer;
   block-size: $spacing-06;
   min-block-size: $spacing-06;
 }
