--- a/packages/ibm-products-styles/src/components/UserAvatar/_user-avatar.scss
+++ b/packages/ibm-products-styles/src/components/UserAvatar/_user-avatar.scss
@@ -76,15 +76,15 @@ $sizes: (
 }
 
 @mixin setLightBg($order, $color) {
-  .cds--g10 .#{$block-class}--#{$order},
-  .cds--white .#{$block-class}--#{$order} {
+  .#{$carbon-prefix}--g10 .#{$block-class}--#{$order},
+  .#{$carbon-prefix}--white .#{$block-class}--#{$order} {
     @include setBgColor($color);
   }
 }
 
 @mixin setDarkBg($order, $color) {
-  .cds--g90 .#{$block-class}--#{$order},
-  .cds--g100 .#{$block-class}--#{$order} {
+  .#{$carbon-prefix}--g90 .#{$block-class}--#{$order},
+  .#{$carbon-prefix}--g100 .#{$block-class}--#{$order} {
     @include setBgColor($color);
   }
 }
