feat: filter panel, added search

--- a/packages/ibm-products-styles/src/components/FilterPanel/_index.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_index.scss
@@ -12,3 +12,4 @@
 @use './filter-panel-checkbox-with-overflow';
 @use './filter-panel-group';
 @use './filter-panel-label';
+@use './filter-panel-search';
