--- a/packages/ibm-products-styles/src/components/FilterPanel/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_index-with-carbon.scss
@@ -13,3 +13,4 @@
 @use './filter-panel-checkbox-with-overflow';
 @use './filter-panel-group';
 @use './filter-panel-label';
+@use './filter-panel-search';
