feat(FilterPanel): added accordion and group (#4620)
* feat: filter panel, added checkbox with overflow

* fix: comment

* fix: storybook styling

* fix: menu button flicker

* feat: filter panel, added accordion and group

* fix: comment failing test

* fix: clean up comment

* fix: color

* fix: format for undefined count

* fix: review updates

* chore: fix capitalization

* chore: move filter panel checkbox with overflow

Not sure why yet, but canary flags were not working

* chore: re-add filter panel checkbox with overflow

---------

Co-authored-by: Elysia <Elysia.Hwang@ibm.com>

--- a/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-checkbox-with-overflow.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-checkbox-with-overflow.scss
@@ -12,10 +12,10 @@
 @use '../../global/styles/project-settings' as c4p-settings;
 @use '../../global/styles/mixins';
 
+@use '@carbon/styles/scss/colors' as *;
 @use '@carbon/layout/scss/convert' as *;
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/theme' as *;
-@use '@carbon/styles/scss/type';
 
 // The block part of our conventional BEM class names (blockClass__E--M).
 $block-class: #{c4p-settings.$pkg-prefix}--filter-panel-checkbox-with-overflow;
@@ -39,6 +39,7 @@ $carbon: #{c4p-settings.$carbon-prefix};
 // Size the menu button.
 .#{$block-class} .#{$block-class}__overflow-button {
   width: $spacing-06;
+  background-color: $layer;
   block-size: $spacing-06;
   min-block-size: $spacing-06;
 }
