feat(ScrollGradient): new component ScrollGradient (#4446)
* Initial checkin... WIP

* WIP

* WIP

* WIP

* Continued work in progress - pre four side work.

* Working to get gradients to display without a directional prop

* Gradients z-indexed properly
Broke gradients up into 4 divs
Added inline styling to accomodate for the gradient as well as positioning due to scroll bars.

* Updated the docs
Updated the stories to look better

* Simplified the docs code sample

* Tests running

* Added styling to story

* Added a style to accomodate stories in Docs page

* fix: code changes per pr review

---------

Co-authored-by: elysia <elysia.hwang@gmail.com>

--- a/packages/ibm-products-styles/src/components/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-with-carbon.scss
@@ -70,5 +70,6 @@
 @use './Nav/index-with-carbon' as *;
 @use './StringFormatter/index-with-carbon' as *;
 @use './UserAvatar/index-with-carbon' as *;
+@use './ScrollGradient/index-with-carbon' as *;
 @use './StatusIndicator/index-with-carbon' as *;
 @use './FilterPanel/index-with-carbon' as *;
