--- a/packages/ibm-products-styles/src/components/_index.scss
+++ b/packages/ibm-products-styles/src/components/_index.scss
@@ -78,5 +78,6 @@
 @use './Nav';
 @use './StringFormatter';
 @use './UserAvatar';
+@use './ScrollGradient';
 @use './StatusIndicator';
 @use './FilterPanel';
