--- a/packages/ibm-products-styles/src/components/FilterPanel/_carbon-imports.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_carbon-imports.scss
@@ -7,3 +7,8 @@
 
 // Import any Carbon component styles used from FilterPanel in this file.
 // FilterPanel uses the following Carbon components:
+@use '@carbon/react/scss/components/accordion';
+@use '@carbon/react/scss/components/checkbox';
+@use '@carbon/react/scss/components/list';
+@use '@carbon/react/scss/components/overflow-menu';
+@use '@carbon/react/scss/components/search';
