fix(tagoverflow): remove autogenerated comments

--- a/packages/ibm-products/src/components/TagOverflow/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/TagOverflow/_storybook-styles.scss
@@ -7,7 +7,7 @@
 
 @forward '../../../../ibm-products-styles/src/global/styles/project-settings';
 
-// TODO: add any additional styles used by TagOverflow.stories.js
+// Any additional styles used by TagOverflow.stories.js
 @use '../../../../ibm-products-styles/src/global/styles/display-box' as *;
 
 @use '@carbon/react/scss/spacing' as *;
