feat(useravatar): add default color

--- a/packages/ibm-products-styles/src/components/UserAvatar/_user-avatar.scss
+++ b/packages/ibm-products-styles/src/components/UserAvatar/_user-avatar.scss
@@ -76,6 +76,7 @@ $sizes: (
 }
 
 @mixin setLightBg($order, $color) {
+  :root .#{$block-class}--#{$order},
   .#{$carbon-prefix}--g10 .#{$block-class}--#{$order},
   .#{$carbon-prefix}--white .#{$block-class}--#{$order} {
     @include setBgColor($color);
