feat(TagOverflow): new component TagOverflow (#4535)
* feat(tagoverflow): generate default file structure for TagOverflow component

* chore(tagoverflow): update gallery to include example of tagoverflow component

* feat(tagoverflow): component functionality implementation

* fix(tagoverflow): too many re-renders

* fix(tagoverflow): container width updated to according to story definition

* fix(tagoverflow) : story title and id updated as per issue 4529

* test(tagoverflow) : initial unit tests

* chore(tagoverflow): prettier

* test(tagoverflow): added some more unit tests

* fix(tagoverflow): all tags are getting displayed for a second during initial load

* fix(tagoverflow): storybook config changes in accordance with issue 4561

* fix(tagoverflow): accessibility isssue elements with duplicate id exists

* fix(tagoverflow): merge conflict

* test(tagoverflow): some more unit tests

* fix(tagoverflow): typo, self closing tag and array length check

* fix(tagoverflow): spellcheck

* fix(tagoverflow): remove autogenerated comments

* fix(tagoverflow): change config for useravatar background color

* fix(tagoverflow): pass tagType added as a prop

* fix(tagoverflow): test case failure

* fix(tagoverflow): rename itemTemplate to tagComponent

* fix(tag-overflow): optimize custom template rendering logic

* fix(tagoverflow): remove logic for setting default tag type as blue

---------

Co-authored-by: Sinta Augustine <sinta.augustine@ibm.com>

--- a/packages/ibm-products-styles/src/components/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-with-carbon.scss
@@ -72,4 +72,5 @@
 @use './UserAvatar/index-with-carbon' as *;
 @use './ScrollGradient/index-with-carbon' as *;
 @use './StatusIndicator/index-with-carbon' as *;
+@use './TagOverflow/index-with-carbon' as *;
 @use './FilterPanel/index-with-carbon' as *;
