--- a/packages/ibm-products-styles/src/components/ProductiveCard/_productive-card.scss
+++ b/packages/ibm-products-styles/src/components/ProductiveCard/_productive-card.scss
@@ -16,6 +16,9 @@
 $block-class: #{c4p-settings.$pkg-prefix}--card;
 
 .#{$block-class}__productive {
+  display: flex;
+  flex-direction: column;
+
   .#{$block-class}__title {
     @include type.type-style('heading-compact-02');
   }
@@ -100,5 +103,15 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
 
   .#{$block-class}__header-container {
     align-items: flex-start;
+  }
+
+  .#{$block-class}__content-container {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+  }
+
+  .#{$block-class}__header-body-container {
+    flex: 1;
   }
 }
