ConditionBuilder(feat): Condition builder first PR with generated files and basic configs, components

--- a/packages/ibm-products-styles/src/components/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-with-carbon.scss
@@ -74,3 +74,4 @@
 @use './StatusIndicator/index-with-carbon' as *;
 @use './TagOverflow/index-with-carbon' as *;
 @use './FilterPanel/index-with-carbon' as *;
+@use './ConditionBuilder/index-with-carbon' as *;
