--- a/packages/ibm-products-styles/src/components/Guidebanner/_guidebanner.scss
+++ b/packages/ibm-products-styles/src/components/Guidebanner/_guidebanner.scss
@@ -248,7 +248,7 @@ $purple-3: #7433e3;
 }
 
 // Exception handling.
-// If "withLeftgutter", then:
+// If "withLeftGutter", then:
 // - insert 1 rem of more "space" on the left.
 // - move icon 1 rem more to the right.
 .#{$block-class}__with-left-gutter .#{$block-class}__icon-idea {
