--- a/packages/ibm-products-styles/src/components/FullPageError/_full-page-error.scss
+++ b/packages/ibm-products-styles/src/components/FullPageError/_full-page-error.scss
@@ -24,7 +24,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--full-page-error;
 .#{$block-class} {
   height: inherit;
 }
-.#{$block-class}__error-container {
+.#{$block-class}__container {
   height: 100%;
   margin: 0 $spacing-06;
 
@@ -32,19 +32,19 @@ $block-class: #{c4p-settings.$pkg-prefix}--full-page-error;
     margin: 0 $spacing-03;
   }
 }
-.#{$block-class}__error-grid {
+.#{$block-class}__grid {
   height: 100%;
   padding-top: $spacing-07;
   padding-bottom: $spacing-07;
 }
-.#{$block-class}__error-column {
+.#{$block-class}__column {
   padding: 0;
   @include breakpoint(lg) {
     padding: 0 $spacing-07 0 0;
   }
 }
 
-.#{$block-class}__error-svg-container {
+.#{$block-class}__svg-container {
   display: flex;
   height: 100%;
   padding: $spacing-03 $spacing-03 $spacing-11 $spacing-03;
@@ -53,16 +53,16 @@ $block-class: #{c4p-settings.$pkg-prefix}--full-page-error;
   }
 }
 
-.#{$block-class}__error-label,
-.#{$block-class}__error-title {
+.#{$block-class}__label,
+.#{$block-class}__title {
   @include type-style('fluid-heading-05', true);
 }
 
-.#{$block-class}__error-label {
+.#{$block-class}__label {
   display: block;
   color: $text-error;
 }
-.#{$block-class}__error-title {
+.#{$block-class}__title {
   margin-bottom: $spacing-09;
 }
 
@@ -73,12 +73,12 @@ $block-class: #{c4p-settings.$pkg-prefix}--full-page-error;
 }
 
 // safari rendering fix
-.#{$block-class}__error-svg-container svg.#{$block-class}__error-svg {
+.#{$block-class}__svg-container svg.#{$block-class}__svg {
   width: 100%;
 }
 
 // svg theme styles
-.#{$block-class}__error-svg-container svg.#{$block-class}__error-svg path {
+.#{$block-class}__svg-container svg.#{$block-class}__svg path {
   fill: $background;
   stroke: $border-inverse;
 }
