--- a/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
@@ -8,7 +8,11 @@
 // Standard imports.
 @use '../../global/styles/project-settings' as c4p-settings;
 @use '../../global/styles/mixins';
+@use '@carbon/react/scss/spacing' as *;
+@use '@carbon/react/scss/type' as *;
+@use '@carbon/react/scss/theme';
 
+@use './styles/index';
 // Other Carbon settings if needed
 // TODO: @use '@carbon/styles/scss/grid';
 // or
@@ -23,3 +27,22 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 // .#{$block-class} {
 //   // TODO: Styles.
 // }
+
+.#{$block-class}__condition-builder__group {
+  display: flex;
+}
+
+.#{$block-class}__condtion-wrapper {
+  display: flex;
+  flex-flow: row wrap;
+}
+.#{$block-class}__gyap {
+  margin-right: $spacing-01;
+}
+.#{$block-class}__gyap-bottom {
+  margin-bottom: $spacing-01;
+}
+.#{$block-class}__condition-block {
+  display: flex;
+  flex-direction: row;
+}
