--- a/scripts/example-gallery-builder/update-example/templates/src/ThemeSelector/_theme-dropdown.scss
+++ b/scripts/example-gallery-builder/update-example/templates/src/ThemeSelector/_theme-dropdown.scss
@@ -3,6 +3,36 @@
 @use '@carbon/styles/scss/type';
 @use '@carbon/styles/scss/config';
 
+// Best to stick with user preference - DARK
+@media (prefers-color-scheme: dark) {
+  :root {
+    @include theme(themes.$g100, true); // dark default
+  }
+
+  .carbon-theme--user-preference-10-100 {
+    @include theme(themes.$g100, true);
+  }
+
+  .carbon-theme--user-preference-white-90 {
+    @include theme(themes.$g90, true);
+  }
+}
+
+// Best to stick with user preference - LIGHT
+@media (prefers-color-scheme: light) {
+  :root {
+    @include theme(themes.$white, true); // light default
+  }
+
+  .carbon-theme--user-preference-10-100 {
+    @include theme(themes.$g10, true);
+  }
+
+  .carbon-theme--user-preference-white-90 {
+    @include theme(themes.$white, true);
+  }
+}
+
 .carbon-theme--white {
   @include theme(themes.$white, true);
 }
