feat(get-started): new component

--- a/packages/ibm-products-styles/src/components/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-with-carbon.scss
@@ -75,3 +75,4 @@
 @use './TagOverflow/index-with-carbon' as *;
 @use './FilterPanel/index-with-carbon' as *;
 @use './ConditionBuilder/index-with-carbon' as *;
+@use './GetStarted/index-with-carbon' as *;
